syntax = "proto3";

import "proto/types.proto";

option go_package = "github.com/h0n9/toybox/msg-lake/proto";

service Lake {
  rpc Send(stream SendReq) returns (SendRes);
  rpc Recv(RecvReq) returns (stream RecvRes);
}

message SendReq {
  string msg_box_id = 1;
  MsgCapsule msg_capsule = 2;
}

message SendRes {
  bool ok = 1;
}

message RecvReq {
  string msg_box_id = 1;
  string consumer_id = 2;
}

message RecvRes {
  MsgCapsule msg_capsule = 1;
}