syntax = "proto3";

option go_package = "github.com/h0n9/toybox/msg-lake/proto";

message Msg {
  bytes data = 1;
  map<string, bytes> metadata = 2;
}

message Signature {
  bytes pub_key = 1;
  bytes sig_bytes = 2;
}

message MsgCapsule {
  Msg msg = 1;
  Signature signature = 2;
}